# scale-c_creator

./: .env.example  .gitignore  README.md  init_db.py  main.py  pyproject.toml  templating.py
creator/: main.py
creator/content_creator/: ContentCreator.py
creator/output_validation/: slides.py
creator/templates/h5p/: Content.j2  ContentML.j2  DragText.j2  SingleChoiceSet.j2
creator/templates/h5p/Slides/: SlideML.j2
creator/templates/prompts/: system_base.j2  system_chat.j2
creator/templates/prompts/structured_output/: output_schema_json.j2
creator/unit_assembler/: UnitAssembler.py
creator/utils/: expire.py  parsers.py
db/: __init__.py  create_engine.py  tables.py
prompt_builder/: PromptBuilder.py
syntax_validator/validators/: __init__.py  drag_text.py  single_choice.py  text.py
templates/h5p/: DialogCard.j2
templates/h5p/Slides/: Slide.j2
templates/prompts/structured_output/: modalities.json  schemas.py
unit_assembler/: UnitAssembler.py
utils/: error_handling.py  schemas.py
