[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.4",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
creator = [
    "templates/**",
]